add tag to ch 3 study case

--- a/caseStudyWP/02-chap2.Rmd
+++ b/caseStudyWP/02-chap2.Rmd
@@ -189,7 +189,7 @@ Classification accuracy was evaluated based on the ratio of successful classific
 
 ### PROJECTION-BASED LRPS{#projectedMethods}
 
-The projection-based LRP approach combines all the information known for individual CUs within an SMU and then uses that information to project abundance trends into the future. Projection-based LRPs are then estimated using projected future CU abundances to characterize the relationship between aggregate SMU-level spawner abundance and the probability that all CUs will be above their lower benchmarks (e.g. $S_{gen}$) at a given level of exploitation. This projection-based LRP approach allows for explicit consideration of uncertainty as the user can specify various projection scenarios to reflect lack of biological or fisheries information. As with logistic regression-based LRPs, we relied on status estimated from a single metric on abundances ($S_{gen}$) rather than the multidimensional scanner tool to develop LRPs using projections. Future extensions of this approach may want to consider applying the multidimensional scanner tool within forward projections to classify CU status. 
+The projection-based LRP approach combines all the information known for individual CUs within an SMU and then uses that information to project abundance trends into the future. Projection-based LRPs are then estimated using projected future CU abundances to characterize the relationship between aggregate SMU-level spawner abundance and the probability that all CUs will be above their lower benchmarks (e.g. $S_{gen}$) at a given level of exploitation. This projection-based LRP approach allows for explicit consideration of uncertainty as the user can specify various projection scenarios to reflect lack of biological or fisheries information. As with logistic regression-based LRPs <!-- CW: is this still true? didn't we use the logistic regression-based with the distributional benchmark? -->, we relied on status estimated from a single metric on abundances ($S_{gen}$) rather than the multidimensional scanner tool to develop LRPs using projections. Future extensions of this approach may want to consider applying the multidimensional scanner tool within forward projections to classify CU status. 
 
 We used the samSim closed loop simulation modelling tool to conduct stochastic projections for our case study applications. samSim is an R package that was developed to quantify recovery potential for Pacific salmon populations [@holtQuantitativeToolEvaluating2020; @freshwaterBenefitsLimitationsIncreasing2020]. We created a modified version of samSim to support LRP estimation. The LRP version of samSim is described in detail in Appendix  \@ref(app:samsim-appendix), while model code is available on GitHub at: https://github.com/Pacific-salmon-assess/samSim/tree/LRP.  
 
