--- a/caseStudyWP/06-chap6.Rmd
+++ b/caseStudyWP/06-chap6.Rmd
@@ -15,28 +15,29 @@ For example, in the Inside South Coast Chum - Non-Fraser study case, the LRP was
 
 
 
-
-
 ## Aggregate abundance-based LRPs
 
 ### Logistic regression-based LRPs
 
-The Logistic regression-based LRPs are empirically derived from the past observations of SMU abundance and CU statuses. In this method we apply a logistic regression to identify historical abundance levels associated with probabilities that all CUs within an SMU have statuses above the red zone or above their lower benchmarks. Similarly to the proportion-based LRP, this aggregate abundance method depends on the individual CU assessments.  
+The Logistic regression-based LRPs are empirically derived from the past observations of SMU abundance and CU statuses. In this method we apply a logistic regression to identify historical abundance levels associated with probabilities that all CUs within an SMU have statuses above the red zone or above their lower benchmarks. Similarly to the proportion-based LRP, this aggregate abundance method depends on the outcomes of individual CU assessment, which are sensitive to the method chosen for the assessment and the data availability. 
 
+The Logistic regression-based LRP is only estimable when there are years when all CUs or sub-populations are above their lower benchmark and years when at least one CU is below their lower benchmarks. This was not the case for the WCVI Chinook study case due to one inlet always been below its lower benchmark. In addition, individual CU must have moderate to high level of covariation, so that the aggregate abundance of the SMU is a good indicator of individual CU status. The case studies shown in this paper show that logistic regression-based LRPs were estimable for interior Fraser coho (correlation with CUS of XX) but not estimable for Inside South Coast Chum - Non-Fraser (correlation within CUs of XX). Additional factors for the poor fit of the logistic regression-based LRPs for the Inside South Coast Chum - Non-Fraser study case include the presumed wide range of productivity and capacity values for the CUs within taht SMU. 
 
-The Logistic regression-based LRP is only estimable when there are years when all CUs or sub-populations are above their lower benchmark and years when at least one CU is below their lower benchmarks. This was not the case for the WCVI Chinook study case due to one inlet always been below its lower benchmark. 
+Missing data for individual CUs within an SMU may also pose a problem for the estimation of logistic regression-based LRPs. When data is missing for one or more CUs within and SMU, it may still be appropriate to apply the logistic regression-based LRP to the remaining CUs with data to assess status for the entire SMU. This is particularly true if there are high levels of covariation between the CUs. However, the logistic regression model fit will degenerate as the number of CUs with missing data increases. Sensitivity analysis for the Interior Fraser Coho study case showed that the model fit degenerated when two CU data sets were removed from the analysis. 
 
-
-
-results depend on the lower benchmark used for determining the underlying CU status, which in turn will depend on data availability. 
-
-Individual CU must have moderate to high level of covariation, so that the aggregate abundance of the SMU is a good indicator of individual CU status. The case studies shown in this paper show that logistic regression-based LRPs were estimable for interior Fraser coho, correlation with CUS of XX) but not estimable for Inside South Coast Chum - Non-Fraser (correlation within CUs of XX).
-
-When data is missing for one or more CUs within and SMU, it may be appropriate to apply the logistic regression-based LRP to the remaining CUs with data as an indicator for the entire SMU. This is particularly true if there are high levels of covariation between the CUs. However the logistic regression model fit will degenerate is enough CUs are missing data, so that there is not enough statistical power to estimate the logistic regression relationship, as was observed in the sensitivity analysis for Interior Fraser Coho.   
-
-Model diagnostics and statistical testing of model assumptions will shed light on reiability of model estimates.  
+Finally, it is important to inspect model diagnostics and statistically test the model assumptions whenever applying the logistic regression-based LRPs. In Chapter \@ref(lrp-estimation-methods) we provide a list of model diagnostics that should be checked when applying this method.   
 
 ### Projection based LRPs
+
+<!--
+Question: Why did we not apply the projection-based LRP to the Chum study case? Was is because we had no means of estimating the SR parameters for the Chum CUs? If that is the case, would it be correct to say that the projection-based LRP is not appropriate for data poor scenarios? 
+-->
+
+The projection-based LRPs approach relies on closed-loop simulation model to project future CU abundances. These projections are then used to identify the relationship between aggregate SMU abundances and the probabilities that all CUs are above their lower benchmarks, given a pre-defined level of expoitation. The most important requirement for the application of projection-based LRPs is the availability of information on productivity and capacity for the CUs within an SMU. Parameter estimates for productivity and capacity can be provided based on single parameter estimates, e.g., parameters derived based on expert input or watershed model estimates (see WCVI Chinook study case, chapter \@ref(#WCVIchinookChapter)) or posterior distributions from stock recruitment analyses (see interior Fraser Coho study case, chapter \@ref(#IFCChapter)). We did not estimate projection-based LRPs for Inside South Coast Chum - Non-Fraser study case because estimates of capacity and productivity were not available for the CUs within that SMU. 
+
+The projection-based LRP approach is flexible and allows for consideration of structural uncertainty in the SMU population dynamics via consideration of alternative future scenarios. 
+
+
 
 - allows for consideration of structural uncertainty via consideration of alternative future scenarios. 
 - Results depend on the level of exploitation rates assumed in future projections with higher exploitation rates resulting in higher aggregate abundance LRPs
