--- a/caseStudyWP/06-chap6.Rmd
+++ b/caseStudyWP/06-chap6.Rmd
@@ -8,7 +8,7 @@ To be completed.
 
 The proportion-based LRPs are the simplest assessment method presented. It consists in verifying is all CUs within the SMU of interest are assessed to be above their lower benchmarks or above the red zone. Complications related to applying proportion-based LRPs arrise when considering the range of data availability for salmon CUs. The data availability will determine what metrics are used for the CU status assessment and wether an assessment can be made at all. Recommendations on when it may be appropriate to use a subset of CUs as proxy for all CUs within an SMU are provided in the companion Guidelines paper (Holt et al. In review).   
 
-The case studies in this paper considered a variety of metrics and assessment methods for determining status of individual CUs. We found that using $S_{gen}$ as single metric lower benchmark resulted in similar status assessments to using the  multi-dimensional assessment tool. This similarities occur because in most years the multi-dimensional approach relies on $S_{gen}$ estimates to assess status as was seen on both Interior Fraser coho and WCVI chinook study cases. Exceptions occur when the $S_{gen}$ estimates are below population thresholds (e.g. below 1500 spawners), as was seen in the interior Fraser coho study case. The status assessments, however, are sensitive to the method and recruitment model used to estimate $S_{gen}$. The decision on which method to consider depends on the iterpretation of the data and prior knowledge for each CU, highlighting the importance of considering expert knowledge input and peer-review for salmon assessments. 
+The case studies in this paper considered a variety of metrics and assessment methods for determining status of individual CUs. We found that using $S_{gen}$ as single metric lower benchmark resulted in similar status assessments to using the  multi-dimensional assessment tool. This similarities occur because in most years the multi-dimensional approach relies on $S_{gen}$ estimates to assess status, as was seen on both Interior Fraser coho and WCVI chinook study cases. Exceptions occur when the $S_{gen}$ estimates are below population thresholds (e.g. below 1500 spawners), as in the interior Fraser coho study case. The status assessments, however, are sensitive to the method and recruitment model used to estimate $S_{gen}$. The decision on which method to consider depends on the iterpretation of the data and prior knowledge for each CU, highlighting the importance of considering expert knowledge input and peer-review for salmon assessments. 
 In data poor scenarios, it may not be possible to estimate $S_{gen}$, as was seen in the Inside South Coast Chum - Non-Fraser study case. When $S_{gen}$ estimates are not available and alternative single metric benchmarks are used, e.g. abundance percentiles, the status assessments between the multi-dimensional tool and single metric approach diverge more.
 For example, in the Inside South Coast Chum - Non-Fraser study case, the LRP was triggered more often when percentile benchmarks were used. Whereas when the distributional target was used as a metric for the Interior Fraser coho study case, the LRP was triggered less often when compared to the multi-dimensional assessment tool. This is likely associated with the fact that single metric benchmarks are usually less reliable in assessing status when compared to $S_{gen}$. By combining multiple metrics, the multi-dimensional status assessment tool likely improves the stability of the assessment results. In addition, using the multi-dimensional approach allows for the consideration of CU's that would otherwise be considered data deficient. The exclusion of CUs with incomplete time series led to overoptimistic assessments in the Inside South Coast Chum - Non-Fraser study case. 
 
