--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -55,9 +55,6 @@ Data for this case study cover return years 1998 -2020. Data prior to 1998 were 
 
 The exploitation rate time series is a large source of uncertainty for Interior Fraser coho. Exploitation rates are only available at the SMU-level, so are assumed constant among all CUs, which is unlikely to be true. Furthermore, models used to reconstruct exploitation rates require a large number of assumptions that are expected to be incorrect [@arbeiderInteriorFraserCoho2020]. Because exploitation rate time series are used to reconstruct spawner-recruit time series, errors in exploitation rates will propagate through to estimates of stock recruitment parameters, relative abundance-based benchmarks such as $S_{gen}$, and covaration in recruitment residuals. Additional sources of uncertainty in Interior Fraser coho data sets include observation errors in spawner abundance estimates and estimates of age-at-maturity. Spawner abundance estimates are largely derived from visual surveys. Scale sampling to determine age structure is incomplete at at the CU-level with small sample sizes, missing data, and limited spatial representation within CUs in some years [@kormanEvaluationFrameworkAssessing2019]
 
-<!-- Is the sentence below supposed to be removed? -->
-The scale sampling is incomplete as there are years without any scales, others with small sample sizes, and limited spatial representation within CUs.
-
 
 
 ## CU Status Estimation
@@ -85,9 +82,10 @@ Note that our decision to maintain this metric as part of our current evaluation
 
 ### Estimation of Sgen{#cohoSgen}
 
-Estimates of Sgen are required when assessing CU status using both the multi-dimensional rapid scanning tool <!--CH: "Rapid Multidimenstional Scanning Tool"-->and the comparisson of current CU-level abundance to $S_{gen}$. Two different formulations of stock recruitment model were used to estimate $S_{gen}$: (i) a base Ricker model, which includes a marine survival covariate, and (ii) a Ricker_prioCap model in which an informative prior distribution is used to increase  $S_{REP}$ compared to the base model. $S_{REP}$ is the spawner abundance level at which the stock replaces itself; the relationship between $S_{REP}$ and Ricker stock recuit model parameters is shown below. Both of these models have been previously developed and applied to Interior Fraser Coho CUs. A third Ricker model, in which both an informative prior on $S_{REP}$  and depensatory mortality were included, was also used by @kormanEvaluationFrameworkAssessing2019 and @arbeiderInteriorFraserCoho2020; however, we did not include it in our case study in order to simplify our analysis.  <!--CH: is there any biological reason why we care less about that 3rd model? Any reason why Korman et al or Arbeider et al. thought it was perhaps less feasible?-->
+Estimates of Sgen are required when assessing CU status using both the multi-dimensional rapid scanning tool <!--CH: "Rapid Multidimenstional Scanning Tool"-->and the comparisson of current CU-level abundance to $S_{gen}$. Two different formulations of stock recruitment model were used to estimate $S_{gen}$: (i) a base Ricker model, which includes a marine survival covariate, and (ii) a Ricker_prioCap model in which an informative prior distribution is used to increase  $S_{REP}$ compared to the base model. $S_{REP}$ is the spawner abundance level at which the stock replaces itself; the relationship between $S_{REP}$ and Ricker stock recuit model parameters is shown below. Both of these models have been previously developed and applied to Interior Fraser Coho CUs. A third Ricker model, in which both an informative prior on $S_{REP}$  and depensatory mortality were included, was also used by @kormanEvaluationFrameworkAssessing2019 and @arbeiderInteriorFraserCoho2020; however, we did not include it in our case study in order to simplify our analysis. <!--CH: is there any biological reason why we care less about that 3rd model? Any reason why Korman et al or Arbeider et al. thought it was perhaps less feasible?-->
 
-<!-- CW: Perhaps this was already done in @kormanEvaluationFrameworkAssessing2019 or @arbeiderInteriorFraserCoho2020, but it may be good to explain that the marine survival covariate is the based on data from hatchery indicator stocks and because of that they are not CU specific. or are they? -->
+The marine survival covariate used when fitting both models is a hatchery-based smolt-to-adult survival rate index.  The index is not CU-specific; the same index is applied to all CUs.
+
 
 @kormanEvaluationFrameworkAssessing2019 and @arbeiderInteriorFraserCoho2020 used a hierarchical model structure for both the base Ricker and Ricker_priorCap models that assumed CU-level productivity parameters were sampled from a common, normal distribution shared by all CUs. Using formal model selection criteria (i.e., DIC), @kormanEvaluationFrameworkAssessing2019 found higher support for the hierarchical structure than when productivity parameters were assumed independent among CUs. However, our initial examination of the hierarchical approach applied to the updated dataset lead us to select the independent CU approach for our evaluation. Firstly, we found that LRP estimates were sensitive to the assumed standard deviation on the hyper-distribution <!--prior-->  for the productivity parameter. Using the individual model approach avoided needing to make a decision <!--suggest: Using the individual model approach removed prior influence on model results -->. Secondly, our hierarchical model was unable to converge on an LRP solution in several years between 2015 and 2020, including the most recent year (2020). Thirdly, because all CUs had equal amounts of data, the commonly cited benefit of hierarchical models allowing data-poor systems to borrow information from data-rich systems did not apply. While future stock recruit analyses for Interior Fraser Coho may wish to re-visit the hierarchical model, we do not expect our decision to apply an individual modelling approach here will affect out general conclusions.
 
