--- a/caseStudyWP/01-chap1.Rmd
+++ b/caseStudyWP/01-chap1.Rmd
@@ -2,11 +2,13 @@
 
 Under DFO's New Fisheries Act, Limit Reference Points (LRPs) will be required for all major fish stocks prescribed in regulation. Stocks that drop below their LRP will trigger the development of a rebuilding plan. For Pacific salmon, it is anticipated there will be > 65 major fish stocks (or stock management units, SMUs), where the proposed functional definition of a SMU is a group of one or more Wild Salmon Policy (WSP) Conservation Units (CUs) that are managed together with the objective of achieving a joint status. Under the WSP, a CU is defined as ‘a group of wild salmon sufficiently isolated from other groups that, if lost, is very unlikely to recolonize naturally within an acceptable time frame, such as human lifetime or a specified number of salmon generations’ (DFO 2005). Thus, while LRPs under the Fisheries Act are required at the SMU-level, monitoring and management under DFO's WSP occurs at the finer CU-level. Methods to assess CU status have been identified for a range of data types, and WSP Integrated assessment methods that use expert opinion to combine multiple metrics into a single estimate of CU status have been developed (e.g., @grant2017FraserSockeye2020). Metrics used to assign WSP CU status include spawner abundances, short- and long-term trends in abundance, and distribution of abundance. At present, a key gap in our ability to develop LRPs under the Fisheries Act is that CU-level status assessments have not been aggregated to the SMU level.
 
-
 <!--
 CW:  suggestion would be to use: integrated WSP assessment (expert driven approach), 
 and integrated assessment models (second meaning)
 KH: To Do: work to make sure this terminology is consistently applied through the rest of the paper
+Decision: WSP Integrated Assessment; only use integrated the first time; after that, shorten to [WSP assessment]
+
+
 -->
 
 LRPs are defined within DFO's 'Precautionary Approach to Fisheries Decision-Making' as the stock status below which serious harm is occurring to the stock [@governmentofcanadaFisheryDecisionmakingFramework2009]. While LRPs are often based on metrics directly linked to productivity, such as spawning biomass or fishing mortality rates, the type of metric used to define an LRP can vary among species and data types, and may be related to other stock characteristics when appropriate. Since the CU is the fundamental unit of biodiversity that DFO aims to maintain under the WSP, it follows that methods for identifying LRPs should ensure that component CUs are maintained.  The companion working paper to this one, *Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units* (Holt et al., in review), suggests that the maintenance of spawning abundance at the Conservation Unit (CU) level is a key biological requirement for Pacific Salmon LRPs.
